objects/SBQQ__QuoteLine__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteLineHelp</customHelpPage>
    <description>Individual line item on a quote.</description>
    <fields>
        <fullName>ACV_ARR_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACV/ARR Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACV_Segment_Index__c</fullName>
        <formula>IF(OR(SBQQ__ProductFamily__c = &quot;Licenses&quot;,SBQQ__ProductFamily__c = &quot;Premier Support&quot;) &amp;&amp;  SBQQ__SegmentIndex__c = 1 ,&quot;1&quot;,
   IF(OR(SBQQ__ProductFamily__c = &quot;Licenses&quot;,SBQQ__ProductFamily__c = &quot;Premier Support&quot;) &amp;&amp;  SBQQ__SegmentIndex__c = 2 ,&quot;2&quot;,
   IF(OR(SBQQ__ProductFamily__c = &quot;Licenses&quot;,SBQQ__ProductFamily__c = &quot;Premier Support&quot;) &amp;&amp;  SBQQ__SegmentIndex__c = 3 ,&quot;3&quot;,
   IF(OR(SBQQ__ProductFamily__c = &quot;Licenses&quot;,SBQQ__ProductFamily__c = &quot;Premier Support&quot;) &amp;&amp;  SBQQ__SegmentIndex__c = 4 ,&quot;4&quot;,
   IF(OR(SBQQ__ProductFamily__c = &quot;Licenses&quot;,SBQQ__ProductFamily__c = &quot;Premier Support&quot;) &amp;&amp;  SBQQ__SegmentIndex__c = 5 ,&quot;5&quot;,
NULL)))))</formula>
        <label>ACV Segment Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ARR_Converted__c</fullName>
        <label>ARR (Converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ARR__c</fullName>
        <label>ARR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Location_Code__c</fullName>
        <description>The ID for individual locations configured in AvaTax.</description>
        <inlineHelpText>The ID for individual locations configured in AvaTax.</inlineHelpText>
        <label>Location Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__SalesTaxDetails__c</fullName>
        <description>AvaTax Sales Tax Details</description>
        <inlineHelpText>AvaTax Sales Tax Details</inlineHelpText>
        <label>Sales Tax Details (Deprecated)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__Sales_Tax_Details__c</fullName>
        <description>Displays broken down rates for the tax amount.</description>
        <inlineHelpText>Displays broken down rates for the tax amount.</inlineHelpText>
        <label>Sales Tax Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AVA_SFCPQ__TaxAmount__c</fullName>
        <description>Displays the tax amount returned by AvaTax.</description>
        <inlineHelpText>Displays the tax amount returned by AvaTax.</inlineHelpText>
        <label>Sales Tax Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdditionalDiscountUnit__c</fullName>
        <label>AdditionalDiscountUnit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Total Override</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Unit Override</fullName>
                    <isActive>false</isActive>
                    <label>Unit Override</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annualized_ACV_Converted__c</fullName>
        <label>Annualized ACV (Converted)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annualized_ACV__c</fullName>
        <label>Annualized ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Default_Net_Total__c</fullName>
        <description>This field is used to calculate the net total per year to update ACV in Quote, when year is less than 12 months.</description>
        <formula>IF ( SBQQ__DefaultSubscriptionTerm__c = 1,  Net_Unit_Price__c * SBQQ__Quantity__c * 12, Net_Unit_Price__c * SBQQ__Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Default Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exclude_for_PSup_Product__c</fullName>
        <formula>IF( ISPICKVAL(SBQQ__PricingMethod__c, &quot;Percent Of Total&quot;) &amp;&amp;  SBQQ__ProductCode__c != &apos;PSup&apos; , &quot;False&quot;, IF( SBQQ__Product__r.SBQQ__ExcludeFromMaintenance__c = True &amp;&amp; ISPICKVAL(SBQQ__Product__r.SBQQ__SubscriptionCategory__c, &quot;Licenses&quot;) , &quot;True&quot;, &quot;False&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude for PSup Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Default_Quantity_Set__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by Copado package product rules to prevent override of manually-adjusted quantities for included products.</description>
        <inlineHelpText>Used by Copado package product rules to prevent override of manually-adjusted quantities for included products.</inlineHelpText>
        <label>Initial Default Quantity Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current_ARR__c</fullName>
        <formula>IF( AND(SBQQ__EffectiveStartDate__c  &lt;=  TODAY(), TODAY()   &lt;=  SBQQ__EffectiveEndDate__c),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current ARR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Discount__c</fullName>
        <description>This field is used to store the discount % when given on Amt or %</description>
        <label>Line Discount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Net_Unit_Price__c</fullName>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_of_Months__c</fullName>
        <description>This field is used in &apos;RenewalOpportunityHelper&apos; class to calculate the number of months between start date and end date.</description>
        <formula>(YEAR( SBQQ__EndDate__c)*12+MONTH(SBQQ__EndDate__c))-
(YEAR( SBQQ__StartDate__c )*12+MONTH(SBQQ__StartDate__c ))+1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Months</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Non_Segmented_or_Non_Subscription__c</fullName>
        <formula>IF(AND(ISBLANK(SBQQ__SegmentIndex__c), TEXT(SBQQ__SubscriptionType__c) = &quot;Renewable&quot;),&quot;Non-Segmented Item&quot;,
IF(AND(ISBLANK(SBQQ__SegmentIndex__c), TEXT(SBQQ__SubscriptionType__c) &lt;&gt; &quot;Renewable&quot;),&quot;Non-Subscription Item&quot;,
IF(AND(!ISBLANK(SBQQ__SegmentIndex__c), !ISBLANK(TEXT(SBQQ__SubscriptionType__c))),&quot;Segmented Item&quot;,Null)))</formula>
        <label>Non-Segmented or Non-Subscription</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Standard Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>One_time_Product_Discount__c</fullName>
        <formula>IF( ISPICKVAL(SBQQ__Product__r.SBQQ__SubscriptionType__c,&apos;One-time&apos;), PS_CPQ_Original_Price__c - SBQQ__NetTotal__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-time Product Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OpportunityLineItemId__c</fullName>
        <label>OpportunityLineItemId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalQuoteLineId2__c</fullName>
        <label>OriginalQuoteLineId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_Equivalent_Discount__c</fullName>
        <description>Total % discount for this line item, including all discounts applied.</description>
        <formula>IF(
  SBQQ__NonDiscountable__c=TRUE,
  0,
  1-((SBQQ__NetPrice__c/(IF(SBQQ__ProrateMultiplier__c&gt;0,SBQQ__ProrateMultiplier__c,1)))/SBQQ__OriginalPrice__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total % discount for this line item, including all discounts applied.</inlineHelpText>
        <label>Equivalent Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_Net_Price_Per_Month__c</fullName>
        <formula>SBQQ__NetPrice__c/  SBQQ__ProrateMultiplier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price Per Month</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_Original_Price__c</fullName>
        <description>Original (default) List Price of this item. Created for display in Line Editor.</description>
        <formula>SBQQ__OriginalPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Original (default) List Price of this item.</inlineHelpText>
        <label>Original Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_Term_in_Months__c</fullName>
        <description>The term of this line, in Months, rounded up. Matches Prorate Multiplier for any Subscription Pricing=Fixed Price products.</description>
        <formula>IF(
NOT(ISPICKVAL(SBQQ__SubscriptionPricing__c,&quot;Fixed Price&quot;)),null,
MCEILING(SBQQ__ProrateMultiplier__c)
)</formula>
        <inlineHelpText>The term of this line, in Months, rounded up.</inlineHelpText>
        <label>Term in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_CPQ_With_Without_Terms__c</fullName>
        <description>a field created for output document purposes. will group product by product families to distinguish number of columns for each gruop</description>
        <formula>IF( OR( ISPICKVAL( SBQQ__Product__r.Family , &quot;Licenses&quot;), ISPICKVAL(SBQQ__Product__r.Family, &quot;Premier Support&quot;) ), &quot;Licenses and Premier Support&quot;, &quot;Services and others&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>With/Without Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Is_Licence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when Product Family equals Licence or Premier Support. Used in Template</description>
        <label>Is Licence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_Template_Monthly_Rate__c</fullName>
        <formula>PS_CPQ_Net_Price_Per_Month__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Monthly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Template_Net_Total__c</fullName>
        <formula>SBQQ__NetTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Template Net Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_Uplift__c</fullName>
        <label>Uplift</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PS_Uplift_from_Quote__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Uplift from Quote</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Parent_Product_Code__c</fullName>
        <description>The Product Code of the &quot;Parent Product&quot; or Package product.</description>
        <formula>Parent_Product__r.ProductCode</formula>
        <inlineHelpText>The Product Code of the &quot;Parent Product&quot; or Package product.</inlineHelpText>
        <label>Parent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Package Product that is parent to this child product.</description>
        <inlineHelpText>The Package Product that is parent to this child product.</inlineHelpText>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Quote Lines (Parent Product)</relationshipLabel>
        <relationshipName>Included_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_With_Uplift__c</fullName>
        <formula>IF(SBQQ__ListPrice__c  = 0, Net_Unit_Price__c, IF (AND(!ISBLANK( SBQQ__Uplift__c ), ISBLANK(SBQQ__SubscriptionPercent__c)),

CASE( SBQQ__SegmentIndex__c,
	2, ROUND(SBQQ__ListPrice__c *(SBQQ__Uplift__c +1),2),
	3, ROUND(SBQQ__ListPrice__c * (SBQQ__Uplift__c + 1)*(SBQQ__Uplift__c +1) ,2),
	4, ROUND(SBQQ__ListPrice__c * (SBQQ__Uplift__c +1)*(SBQQ__Uplift__c +1) * (SBQQ__Uplift__c +1),2),
	SBQQ__ListPrice__c
		) ,
IF(! ISBLANK(SBQQ__SubscriptionPercent__c) , SBQQ__RegularPrice__c, IF( Line_Discount__c &lt; 0 , SBQQ__ListPrice__c ,SBQQ__RegularPrice__c))))</formula>
        <label>Price With Uplift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ProductSortOrder__c</fullName>
        <description>Displays the product sort order for line item ordering</description>
        <formula>TEXT(SBQQ__Product__r.SBQQ__SortOrder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the product sort order for line item ordering</inlineHelpText>
        <label>Product Sort Order</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Segment_Index__c</fullName>
        <label>Proposal Segment Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Segment_Label__c</fullName>
        <label>Proposal Segment Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Quantity_Whole__c</fullName>
        <formula>SBQQ__Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Quantity Whole</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Renewable_Product_Discount__c</fullName>
        <formula>IF( ISPICKVAL(SBQQ__Product__r.SBQQ__SubscriptionType__c,&apos;Renewable&apos;),  PS_CPQ_Original_Price__c -  SBQQ__NetTotal__c  , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewable Product Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Additional customer discount extended on this line item in terms of absolute amount.</description>
        <inlineHelpText>Additional customer discount extended on this line item in the form of an absolute amount.</inlineHelpText>
        <label>Additional Disc. (Amt)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscount__c</fullName>
        <description>Total additional discount extends on this line item. Additional discount is defined as discount extended on top of volume discount or negotiated prices.</description>
        <formula>(SBQQ__RegularPrice__c - SBQQ__CustomerPrice__c) *  SBQQ__EffectiveQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total additional discounts extended to this line item. Additional discount is defined as discount extended on top of volume discount or negotiated prices.</inlineHelpText>
        <label>Additional Disc.</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalQuantity__c</fullName>
        <description>Additional quantity for this product which contributes to volume discount calculations.</description>
        <inlineHelpText>Additional quantity for this product that contributes to volume discount calculations</inlineHelpText>
        <label>Additional Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__AllowAssetRefund__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the underlying asset may have its quantity refunded. Only relevant for Amendments.</description>
        <inlineHelpText>Indicates whether the asset represented by this line may be refunded.</inlineHelpText>
        <label>Allow Asset Refunds</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BatchQuantity__c</fullName>
        <description>For products sold in batches quantity in each batch. Defaulted from the product record.</description>
        <inlineHelpText>If products are sold in batches, this stores the quantity in each batch, defaulted from the product.</inlineHelpText>
        <label>Batch Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingType__c</fullName>
        <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
        <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BlockPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assign a fixed price to a product based on quantity and quantity range. This overrides the automatic calculation of quantity * unit price.</description>
        <inlineHelpText>Assign a fixed price to a product based on quantity and quantity range. This overrides the automatic calculation of quantity * unit price.</inlineHelpText>
        <label>Block Price</label>
        <referenceTo>SBQQ__BlockPrice__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</description>
        <inlineHelpText>Indicates whether this line item represents a package; meaning, it includes other line items in this quote.</inlineHelpText>
        <label>Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BundledQuantity__c</fullName>
        <description>For items with calculated quantities this field hold the original (user entered) quantity.</description>
        <inlineHelpText>For items with calculated quantities this field holds the original quantity entered by the user.</inlineHelpText>
        <label>Original Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Bundled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items are zero price and do not allow price or quantity to be edited.</description>
        <inlineHelpText>Indicates the product on this line item is bundled (included) by another product in this quote. Bundled lines items have a zero price and do not allow price or quantity to be edited.</inlineHelpText>
        <label>Bundled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__CarryoverLine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes this line as an auto-mapped option on an Upgraded Bundle.</description>
        <inlineHelpText>Denotes this line as an auto-selected option of an upgrade bundle.</inlineHelpText>
        <label>Carry-Over Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ChargeType__c</fullName>
        <description>The type of the product charge.  This is a system field that is derived from the associated product.</description>
        <inlineHelpText>The type of the product charge.  This is a system field that is derived from the associated product.</inlineHelpText>
        <label>Charge Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__ChargeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CompletelyContracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this line is completely contracted.</description>
        <inlineHelpText>Indicates if this line is completely contracted.</inlineHelpText>
        <label>Is Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentCost__c</fullName>
        <description>Total cost of components in this package.</description>
        <inlineHelpText>Total cost of components in this package.</inlineHelpText>
        <label>Component Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentDiscountedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixes additional discount for this component to the parent package discount.</description>
        <inlineHelpText>Fixes additional discount for this component to the parent package discount.</inlineHelpText>
        <label>Component Discounted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentListTotal__c</fullName>
        <description>List total of components in this configuration. This field is only populated if this line item references configurable product.</description>
        <inlineHelpText>List total of components in this configuration. This field is only populated if this line item references a configurable product.</inlineHelpText>
        <label>Component List Total</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentSubscriptionScope__c</fullName>
        <description>Subscription scope set at the component level. This field overrides the subscriptions cope copied from the product.</description>
        <inlineHelpText>Percent of Total scope set at the component level. This field overrides the Percent of Total scope copied from the Product Option.</inlineHelpText>
        <label>Component Percent of Total Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Components</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentTotal__c</fullName>
        <description>Sum total of components in this configuration. This field is only populated if this line item references configurable product.</description>
        <inlineHelpText>Sum total of components in this configuration. This field is only populated if this line item references a configurable product.</inlineHelpText>
        <label>Component Net Total</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentUpliftedByPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fixes uplift for this component to the parent package uplift. Uplift only applies to multi-segmented products.</description>
        <inlineHelpText>Fixes uplift for this component to the parent package uplift. Uplift only applies to multi-segmented products.</inlineHelpText>
        <label>Component Uplifted By Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ComponentVisibility__c</fullName>
        <description>Visibility of this component line item.</description>
        <formula>TEXT(SBQQ__ProductOption__r.SBQQ__QuoteLineVisibility__c)</formula>
        <inlineHelpText>Indicates the visibility of the component line item.</inlineHelpText>
        <label>Component Visibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__CompoundDiscountRate__c</fullName>
        <description>Discount rate compounded by quantity (historic).</description>
        <inlineHelpText>Discount rate compounded by quantity (historic).</inlineHelpText>
        <label>Compound Discount (%)</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConfigurationRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that marks this quote line as requiring configuration. Can be used by custom code to request this product be re-configured.</description>
        <inlineHelpText>Flag that marks this quote line as requiring configuration. Can be used by custom code to request this product be re-configured.</inlineHelpText>
        <label>Configuration Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractedPrice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contracted price if the product has negotiated pricing for opportunity&apos;s account. Contracted Prices are available on the Account and can be applied to any product in any price book.</description>
        <inlineHelpText>Contracted price if the product has negotiated pricing for the opportunity&apos;s account. Contracted Prices are available on the Account and can be applied to any product in any price book.</inlineHelpText>
        <label>Contracted Price</label>
        <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__CostEditable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether cost can be edited on this line item.</description>
        <inlineHelpText>Specifies whether cost can be edited on this line item.</inlineHelpText>
        <label>Cost Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Cost__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cost record for this line item.</description>
        <inlineHelpText>Cost record for this line item.</inlineHelpText>
        <label>Cost</label>
        <referenceTo>SBQQ__Cost__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>QuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerPrice__c</fullName>
        <description>Customer unit price for the product quoted by this line item. This is the Net Unit Price excluding any partner discounts.</description>
        <inlineHelpText>Customer unit price for the product quoted by this line item. This is the Net Unit Price excluding any partner discounts.</inlineHelpText>
        <label>Customer Unit Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerTotal__c</fullName>
        <description>Customer total price for this quote line item. This is the Net Total excluding any partner discounts.</description>
        <formula>IF(AND(SBQQ__Renewal__c, !SBQQ__Existing__c, ISBLANK(SBQQ__PriorQuantity__c)), 0, SBQQ__CustomerPrice__c * SBQQ__EffectiveQuantity__c)</formula>
        <inlineHelpText>Customer total price for this quote line item. This is the Net Total excluding any partner discounts.</inlineHelpText>
        <label>Customer Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultSubscriptionTerm__c</fullName>
        <description>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first generated.</description>
        <inlineHelpText>Term length of the subscription, which only applies if the product is a subscription. It is copied from the Subscription Term of the related product when the line item is first generated.</inlineHelpText>
        <label>Default Subscription Term</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <description>Description for this line item.</description>
        <inlineHelpText>Description for this line item.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SBQQ__Dimension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dimensions within an MDQ Product that all each segment to be priced independently. Each Product may contain several Price Dimensions. Yearly Price Dimensions are treated as Subscriptions.</description>
        <inlineHelpText>Dimensions within an MDQ Product that all each segment to be priced independently. Each Product may contain several Price Dimensions. Yearly Price Dimensions are treated as Subscriptions.</inlineHelpText>
        <label>Price Dimension</label>
        <referenceTo>SBQQ__Dimension__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>Quote_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountScheduleType__c</fullName>
        <description>Discount schedule type. Must be a stored value because it&apos;s used in formula fields that are rolled up.</description>
        <inlineHelpText>Discount schedule type. Copied from Type field in associated discount schedule.</inlineHelpText>
        <label>Discount Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specify discounts in terms of % or Amt to be discounted off the product&apos;s price using quantity purchased or term. Set quantity/term ranges in tiers of different discount %. Discount is applied to List Price &amp; resulting total is stored in the Regular Price</description>
        <inlineHelpText>Specify discounts in terms of % or Amt to be discounted off the product&apos;s price using quantity purchased or term. Set quantity/term ranges in tiers of different discount %. Discount is applied to List Price &amp; resulting total is stored in the Regular Price</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Quote Lines</relationshipLabel>
        <relationshipName>R00N70000001opkuEAA</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>